# Catalyst

./: .env  .gitconfig  .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  windows
src/: i18n.ts  index.css  main.tsx  routeTree.gen.ts  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: core.json  default.txt  plugins.json
src-tauri/resources/defaultdata/: themeDefault.json  treeview.json
src-tauri/resources/themes/: dark.css  light.css
src-tauri/resources/themes/dark/: blue.css  green.css  orange.css  red.css  rose.css  violet.css  yellow.css  zinc.css
src-tauri/resources/themes/light/: blue.css  green.css  orange.css  red.css  rose.css  violet.css  yellow.css  zinc.css
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: jwt.rs
src-tauri/src/macos/: deep_link.rs  window_ext.rs
src/components/: ActionsBar.tsx  LoaderComponentAsync.tsx  TextToken.tsx  about.tsx  footer.tsx
src/context/: appContext.tsx
src/data/: enviromentVars.ts  registry-base-colors.ts  stores.ts  theme.tsx  treeEvents.ts
src/features/: SideBarBase.tsx  TitleBar.tsx  macosSystem.tsx  navigationApp.tsx  themeLightConfig.tsx  windowsSystem.tsx
src/functions/: debounce.ts  getFileResources.ts  getId.ts  getThemeStyle.ts  getThemeSystem.ts  storage.ts  transformDataProviderTree.ts  translate.ts
src/hooks/: useGlobalState.ts  useIsResizing.ts  useLoader.ts  useStore.ts  useTheme.ts
src/initialize_app/: apiStream.ts  initializeAppState.ts  theme.ts
(+73 files in other folders)
