[package]
name = "catalyst"
version = "0.1.0"
description = "A Tauri App"
authors = ["cardosomartin33@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "catalyst_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = ["codegen"] }


[dependencies]
tauri = { version = "2.2.3", features = [ "macos-private-api", "devtools", "protocol-asset", "unstable"] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-fs = { version = "2.2.0", features = ["watch"] }
tauri-plugin-store = "2.2.0"
tauri-plugin-http = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-single-instance = "2.2.1"
tauri-plugin-log = { version="2.2.0", features = ["colored"] }
reqwest = "0.12.12"
log = "0.4.25"
url = "2.5.4"
dirs = "6.0.0"
aes-gcm = "0.10.3"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

base64 = "0.22.1"

jsonwebtoken = "9.3.0"

tokio = { version = "1", features = ["full"] }

tracing = "0.1.41"
tracing-error = "0.2.1"
thiserror = "1.0"

native-dialog = "0.7.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2.7"
rand = "0.8.5"
